--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-tasty-burgers": "^1.2.3"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.4.2",
     "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^9.8.6",
