--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ node_js:
   - 12.18.2
   
 install:
-  - npm ci
+  - npm install
   
 script: 
   - npm run generate
-  - npm run deploy
   
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   local_dir: build
+  target-branch: gh-pages
   on: 
-    branch: gh-pages
+    branch: master
     
