--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ deploy:
   token: $GITHUB_TOKEN
   local_dir: build
   target-branch: gh-pages
+  keep_history: true
   on: 
     branch: main
     
