--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - 12.18.2
+cache:
+  directories:
+  - node_modules
   
 install:
   - npm install
@@ -11,9 +14,12 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  token: $GITHUB_TOKEN
+  github_token: $GITHUB_TOKEN
   local_dir: build
   keep_history: true
   on: 
-    branch: main
+    branch: master
+    
+    
+
     
