--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github_token: $GITHUB_TOKEN
-  local_dir: build
+  local_dir: public
   keep_history: true
   on: 
     branch: main
