--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -76,6 +76,10 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./dist
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./assets/pdf
 
   # Deployment job
   deploy:
